tests/ui/consts/const-fn-mismatch.stderr
error[E0379]: functions in traits cannot be declared const
  --> $DIR/const-fn-mismatch.rs:11:5
   |
LL |     const fn f() -> u32 {
   |     ^^^^^ functions in traits cannot be const

error: aborting due to previous error

For more information about this error, try `rustc --explain E0379`.
